--- a/king contatcts.html
+++ b/king contatcts.html
@@ -3,6 +3,6 @@
     <head></head>
 
     <body>
-        <h1>Contact me for any problemshbc you face during the course</h1>
+        <h1>Contact me for any problems! you face during the course</h1>
     </body>
 </HTML>
